--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,11 +7,11 @@ on:
   push:
     branches: [ main ]
     paths:
-      - "ocac-api"
+      - "ocac-api/**"
   pull_request:
     branches: [ main ]
     paths:
-      - "ocac-api"
+      - "ocac-api/**"
 
 jobs:
   build:
